--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns: th="http: //www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Hello</title>
 </head>
 <body>
 Salute!
+
+<br/>
+<form th:method="POST" th:action="@{/logout}">
+<input type="submit" value="logout"/>
+
+</form>
 </body>
 </html>
